--- a/CSManagement/CSManagement/Views/web.config
+++ b/CSManagement/CSManagement/Views/web.config
@@ -29,6 +29,7 @@
 
   <appSettings>
     <add key="webpages:Enabled" value="false"/>
+    <add key="mobileBrowsers" value="Blackberry,BB10,iPad,iPhone,Windows Phone,Windows CE"/>
   </appSettings>
 
   <system.webServer>
