--- a/CSManagement/CSManagement/packages.config
+++ b/CSManagement/CSManagement/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="EASendMail" version="7.6.0.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="EPPlus" version="4.5.3.3" targetFramework="net46" />
   <package id="jQuery" version="1.7" targetFramework="net472" />
   <package id="jquery.datatables" version="1.10.15" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
